# RNNoisePy

./: .gitignore  README.md  hatch_build.py  pyproject.toml
cibuildwheel/: build-rnnoise.sh  test-rnnoise.sh
examples/: rnnoise-file.py  rnnoise-stdio.py  rnnoise-test.py
src/rnnoisepy/: rnnoise.py
